--- a/package.json
+++ b/package.json
@@ -25,29 +25,25 @@
     "url": "https://github.com/philpl/spectacle-sync/issues"
   },
   "dependencies": {
-    "emotion": "^8.0.12",
+    "emotion": "^9.2.6",
     "mitt": "^1.1.3",
-    "react-emotion": "^8.0.12",
-    "simple-peer": "^8.2.0",
-    "socket.io-client": "^2.0.4"
+    "react-emotion": "^9.2.6",
+    "simple-peer": "^9.1.2",
+    "socket.io-client": "^2.1.1"
   },
   "peerDependencies": {
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "spectacle": "^4.0.4"
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "spectacle": "^5.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-emotion": "^8.0.12",
+    "babel-core": "^6.26.3",
+    "babel-plugin-emotion": "^9.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "spectacle": "^4.0.4"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1"
   }
 }
