--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "emotion": "^9.2.6",
     "mitt": "^1.1.3",
+    "qrcode.react": "^0.8.0",
     "react-emotion": "^9.2.6",
     "simple-peer": "^9.1.2",
     "socket.io-client": "^2.1.1"
