--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "build": "babel src -d lib",
+    "watch": "babel src -d lib --watch",
     "prepublish": "yarn run build"
   },
   "repository": {
@@ -29,13 +30,13 @@
     "mitt": "^1.1.3",
     "qrcode.react": "^0.8.0",
     "react-emotion": "^9.2.6",
-    "simple-peer": "^9.1.2",
+    "simple-peer": "^8.5.0",
     "socket.io-client": "^2.1.1"
   },
   "peerDependencies": {
-    "prop-types": "*",
-    "react": "*",
-    "react-dom": "*",
+    "prop-types": ">= 15.0.0",
+    "react": ">= 16.0.0",
+    "react-dom": ">= 16.0.0",
     "spectacle": ">= 4.0.0"
   },
   "devDependencies": {
